Fixed letter spacing and font issues.

--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -154,7 +154,7 @@ $transition-duration-sm: $transition-duration-base * .5 !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: 'Objective', sans-serif !default;
+$font-family-sans-serif: 'Theinhardt', sans-serif !default;
 
 $font-size-base: 0.9375rem !default; // 15px
 
